Get user by ID endpoint implemented
