# src/models/enums/api_messages.ts
@@ -9,5 +9,7 @@ export enum APIMessage {
   ERROR_INVALID_USER_FIELDS = 'All user information must be properly fulfilled',
   ERROR_INVALID_CREDENTIALS_FIELDS = 'Credential fields must be properly fulfilled',
   ERROR_MULTIPLE_USERS_SAME_EMAIL = 'Erroneously exist multiple users with the same email address',
-  INVALID_CREDENTIALS = 'Invalid email address or password'
+  INVALID_CREDENTIALS = 'Invalid email address or password',
+  INVALID_USER_ID = 'Invalid user ID',
+  USER_NOT_FOUND = 'User does not exist or was not found'
 }
